--- a/D1.md
+++ b/D1.md
@@ -8,7 +8,7 @@ Group Members: Collin Boyer, Mason Rodgers, Brandon Click, Drew Sansom_
 
 To combat boredom, our group is making a simple and easy-to-play game that can be picked up and played by anyone no matter their video game knowledge. Nebulous Enigma is a web-based choose-your-own-adventure game set in a science fiction setting.  Players will be confronted with interesting decisions that could end in success or disaster. Additionally, users will be able to find a community and interact with other users.## 2. Initial value proposition and consumer segments
 
-**IVP:**
+## 2. IVP 
 
 For entertainment, solving boredom, and allowing users to take a break from overwhelming video games.
 
