--- a/D1.md
+++ b/D1.md
@@ -139,29 +139,34 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Nice to have - filtering by flags in addition to per-channel opt-in
 
 ### Interview 5: 
-**Summary:** If there is no value, no one will care. Did not sound interested. OPT IN over opt out. I don't want more apps sending them things. Crisis only channel that comes with, everything else is opt in. Worry fuel. Battery lose issue
-Interviewer: Chris Keefe
-Interviewee: Heidi Rodenhizer
-When: 2/13/19
-Consumer segments:
-- Outdoorspeople
-- Property Managers/Landlords
-        
-**Key Insights:**
-- “Choosing channels that you’re interested in would be best”
-- Users might need encouragement to sign up - doesn’t seem critical or particularly useful to them
-- Performance/battery loss might be a stopper
 
-**Representative quotes**
-- “I’d only use it if I thought there was a reason to use it. If there’s some obvious indicator that there’s something happening (if there’s a really huge storm happening, if I just felt the ground shake)”
+**Interviewer:** Kameron Napier\
+**Interviewee:** Zack\
+**When:** 9/21/2024\
+**Consumer Segments:** Gamer
 
-**Hypotheses that were validated**
-- Users will not actively check a clearinghouse like this, but would appreciate notifications
-- Performance/battery loss might be a stopper
+**What do you think when you hear “choose your own adventure”?**
+- This book series from the 80s-90s that had multiple endings.
+- Games like Baldur's Gate.
 
-**Assessment:**
-- Must have - lightweight
-- Must have - possible to provide only useful notifications
+**Interest in space horror and some sci-fi themes.**
+- Likes sci-fi horror.
+- Likes games in this genre that are cooperative or competitive.
+
+**What issues do you see in story games of today?**
+- There is a lack of balence between story and gameplay.
+- When there is gameplay there isn't enough variety.
+- Boring story.
+- Over relience in either gameplay or story.
+
+**Are there any other suggestions you have for us?**
+- It is good to experiment
+- The characters need to be interesting
+- Characters matter a lot.
+
+**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
+- Said might want
+
 
 ### Interview 6:
 
