--- a/D1.md
+++ b/D1.md
@@ -188,6 +188,27 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Hypotheses that were validated:**
    - Notifications should have linked resources for further investigation
 
+### Interview 8:
+
+**Summary:** Story games are simple and often have a lot of redundancy.
+**Interviewer:** Kayden Vicenti\
+**Interviewee:** Kaylin M.\
+**When:** 9/16/20\
+**Consumer Segment:** Casual gamer
+
+**What do you think when you hear “choose your own adventure”?**
+- open-ended they like them a lot, lots of possibilities, ability to replay it again. Story games are very straightforward, can be played more than once, and there are great fandoms.
+
+**Interest in space horror and some sci-fi themes.**
+- Underwater, identifying underwater creatures tends to play few science fiction games, but will interact and watch others play games with these themes. 
+
+**Are there any other suggestions you have for us?**
+- “Redundant dialog, characters/NPCs lack dimension in development, sometimes the story might not be too straightforward, too open-ended and confusing/complicated for the player, too much confusion that doesn't like to discuss games like Reddit, they can see them not wanting to play the game.”
+- “Due to lack of customization, but in some games playing as the character could cancel this out if the storyline depends on it. If the character is set up as you, and there isn’t customization available then, must have customization.”
+
+**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
+- Must have
+
 **Assessment:**
    - Must have - non-alarming tone
    - Must have - significant lead time on crisis events
