--- a/D1.md
+++ b/D1.md
@@ -34,6 +34,9 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **When:** 9/21/2024\
 **Consumer Segments:** Gamer
 
+**What level of video gaming knowledge would you say you have?**
+- Moderate
+
 **What do you think when you hear “choose your own adventure”?**
 - visual novels 
 - moral choices that affect the outcome.
@@ -85,31 +88,34 @@ For entertainment, solving boredom, and allowing users to take a break from over
 
 ### Interview 3:
 
-**Summary:** Too many pop ups will lead to uninstall. Preferences (also notification spacing.) Traffic is a concern. Concise. If done properly, it can be a must have
+### Interview 3:
 
-**Interviewer:** Brandon Click\
-**Interviewee:** James Click\
-**When:** 2/11/2020\
+**Interviewer:** Collin Boyer\
+**Interviewee:** Ed\
+**When:** 9/11/2024\
 **Consumer segments:**
-- Parent
-- Outdoorspeople
-- safety-oriented people
+- General Gamer
 
-**Key Insights:**
-   - To many pop ups will become annoying if they appear to often
-   - Being able to choose when and what is presented is key to its desirability
-   - A priority system for what to be notified about is needed so that the notifications don't get cluttered 
-   - Traffic information is a priority concern for what is often checked say to day
+**What level of video gaming knowledge would you say you have?**
+- Moderate
 
-**Representative quotes:**
-   - “I don't need to know about a small earthquake half a state away in the middle of the night, that can wait until I wake up”
-   - “I don't want to keep getting updates though the day, just a few times are really what I need”
+**What do you think when you hear “choose your own adventure”?**
+- That brings to mind Books, RPGs, DND, and “cheapo flash games.”
 
-**Hypotheses that were validated:**
-   - Checking through news is annoying to do throughout the day
-   - Being able to pick what is important, and how important, is of high demand to the end user
+**Interest in space horror and some sci-fi themes.**
+- Time Travel or something with a cool sci-fi tool like Portal
 
-**Assessment:** Must have
+**What issues do you see in story games of today?**
+- Any Triple-A one that is unfinished on release
+- Games over 100 GB
+- Games almost $80
+
+**Are there any other suggestions you have for us?**
+- Have fun with our art direction don't just do hyperrealism
+
+**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
+- Might want
+
 
 ### Interview 4: 
 **Summary:** Roommate. 22 year old. Very outdoors. First impulse was negative, “Don't tell me what to do” Tone is important. MUST be customizable. Emergency communication area is a MUST. Filter out what she wants. Tags that can denote severity or subject matter. Social impact.
