--- a/D1.md
+++ b/D1.md
@@ -88,8 +88,6 @@ For entertainment, solving boredom, and allowing users to take a break from over
 
 ### Interview 3:
 
-### Interview 3:
-
 **Interviewer:** Collin Boyer\
 **Interviewee:** Ed\
 **When:** 9/11/2024\
@@ -204,6 +202,9 @@ Consumer segments:
 **When:** 9/20/2024
 **Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter
 
+**What level of video gaming knowledge would you say you have?**
+- Moderate
+
 **What do you think when you hear “choose your own adventure”?**
 - Choose your adventure books
 - Blu-Ray CD games
@@ -231,6 +232,9 @@ Consumer segments:
 **Interviewee:** Kaylin M.\
 **When:** 9/16/20\
 **Consumer Segment:** Casual gamer
+
+**What level of video gaming knowledge would you say you have?**
+- Moderate
 
 **What do you think when you hear “choose your own adventure”?**
 - open-ended they like them a lot, lots of possibilities, ability to replay it again. Story games are very straightforward, can be played more than once, and there are great fandoms.
