--- a/D1.md
+++ b/D1.md
@@ -116,31 +116,31 @@ For entertainment, solving boredom, and allowing users to take a break from over
 
 
 ### Interview 4: 
-**Summary:** Roommate. 22 year old. Very outdoors. First impulse was negative, “Don't tell me what to do” Tone is important. MUST be customizable. Emergency communication area is a MUST. Filter out what she wants. Tags that can denote severity or subject matter. Social impact.
-**Interviewer:** Chris Keefe
-**Interviewee:** Laura No Puckett
-**When:**  2/13/20
 
+**Interviewer:** Collin Boyer\
+**Interviewee:** Psy\
+**When:** 9/21/2024\
 **Consumer segments:**
-- Outdoorspeople
+- Gamer
 
-**Key Insights:**
-- Risk-management information may not be perceived as a need
-- Some people may “not want to be told what to do”
-- Notifications must be customized/customizable or we risk alienating independence-focused users
+**What level of video gaming knowledge would you say you have?**
+- Very High
 
-**Representative quotes:**
-- “I don’t want some external thing telling me to panic. I like to be in control - I don’t want something else telling me what to do”
-- “I want to be notified about when people are contacting me - but not much else. I don’t want notifications, unless its people. …. But If there’s a major flood, I don’t care how often it notifies me.”
+**What do you think when you hear “choose your own adventure”?**
+- “Choose your adventure” makes him think of lots of endings
 
-**Hypotheses that were validated:**
-- Users find value in notifications of major risks/inconveniences
-- Users prefer a customizable notification stream
+**Interest in space horror and some sci-fi themes.**
+- He likes kinds of space exploration/sci-fi with combat and varied weapons and ways to travel
 
-**Assessment:**
-- Must have - minimal channel of relevant emergency notifications
-- Nice to have - additional channels
-- Nice to have - filtering by flags in addition to per-channel opt-in
+**What issues do you see in story games of today?**
+- He doesn’t want to sit and watch a 30-minute cutscene before I start playing the game
+
+**Are there any other suggestions you have for us?**
+- None
+
+**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
+- Must have
+
 
 ### Interview 5: 
 **Summary:** If there is no value, no one will care. Did not sound interested. OPT IN over opt out. I don't want more apps sending them things. Crisis only channel that comes with, everything else is opt in. Worry fuel. Battery lose issue
