--- a/D1.md
+++ b/D1.md
@@ -169,10 +169,10 @@ Consumer segments:
 
 ### Interview 6:
 
-**Interviewer:** Isaac Schwarz
-**Interviewee:** Ethan
-**When:** 9/18/2024
-**Consumer Segments:** General Gamer
+**Interviewer:** Isaac Schwarz\
+**Interviewee:** Ethan\
+**When:** 9/18/2024\
+**Consumer Segments:** General Gamer\
 
 **What do you think when you hear “choose your own adventure”?**
 - Telltale games
