--- a/D1.md
+++ b/D1.md
@@ -172,7 +172,7 @@ Consumer segments:
 **Interviewer:** Isaac Schwarz\
 **Interviewee:** Ethan\
 **When:** 9/18/2024\
-**Consumer Segments:** General Gamer\
+**Consumer Segments:** General Gamer
 
 **What do you think when you hear “choose your own adventure”?**
 - Telltale games
