Update D1.md interview 7
fixed interview 7

--- a/D1.md
+++ b/D1.md
@@ -197,9 +197,9 @@ Consumer segments:
 
 ### Interview 7:
 
-**Interviewer:** Isaac Schwarz
-**Interviewee:** Eli
-**When:** 9/20/2024
+**Interviewer:** Isaac Schwarz\
+**Interviewee:** Eli\
+**When:** 9/20/2024\
 **Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter
 
 **What level of video gaming knowledge would you say you have?**
