removing place holder interviews

--- a/D1.md
+++ b/D1.md
@@ -59,32 +59,6 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Said might want
 
 
-### Interview 2:
-
-**Summary:** Traffic is a concern for many. User friendly. Preferences. Notifications over SMS. Consolidated into one app will draw people in.
-
-**Interviewer:** Brandon Click\
-**Interviewee:** Stasy Click\
-**When:**  2/11/2020\
-**Consumer segment:**
-- Parent
-- safety-oriented people
-
-**Key insights:**
-  - Traffic and local news are highly important
-  - Customizability and user friendly design are highly important.
-  - Push notifications are vastly prefered to any other form of contact.
-  - Interview questions can be seen as too open ended for people to give a good answer to.
-
-**Representative quotes:**
-  - “It's annoying having to look through all (news) apps in the morning just to check the traffic and the weather”
-
-**Hypotheses that were validated:**
-  - To many news apps are bothersome to look through 
-  - Not being able to just be notified about what you care about is a nuisance
-  - Having something to compile all relevant data at the start of the day would be beneficial in speeding up morning routines.
-
-**Assessment:** Nice to have
 
 ### Interview 3:
 
@@ -142,31 +116,6 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Must have
 
 
-### Interview 5: 
-**Summary:** If there is no value, no one will care. Did not sound interested. OPT IN over opt out. I don't want more apps sending them things. Crisis only channel that comes with, everything else is opt in. Worry fuel. Battery lose issue
-Interviewer: Chris Keefe
-Interviewee: Heidi Rodenhizer
-When: 2/13/19
-Consumer segments:
-- Outdoorspeople
-- Property Managers/Landlords
-        
-**Key Insights:**
-- “Choosing channels that you’re interested in would be best”
-- Users might need encouragement to sign up - doesn’t seem critical or particularly useful to them
-- Performance/battery loss might be a stopper
-
-**Representative quotes**
-- “I’d only use it if I thought there was a reason to use it. If there’s some obvious indicator that there’s something happening (if there’s a really huge storm happening, if I just felt the ground shake)”
-
-**Hypotheses that were validated**
-- Users will not actively check a clearinghouse like this, but would appreciate notifications
-- Performance/battery loss might be a stopper
-
-**Assessment:**
-- Must have - lightweight
-- Must have - possible to provide only useful notifications
-
 ### Interview 6:
 
 **Interviewer:** Isaac Schwarz\
@@ -197,10 +146,10 @@ Consumer segments:
 
 ### Interview 7:
 
-**Interviewer:** Isaac Schwarz
-**Interviewee:** Eli
-**When:** 9/20/2024
-**Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter
+**Interviewer:** Isaac Schwarz\
+**Interviewee:** Eli\
+**When:** 9/20/2024\
+**Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter\
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -227,11 +176,11 @@ Consumer segments:
 
 ### Interview 8:
 
-**Summary:** Story games are simple and often have a lot of redundancy.
+**Summary:** Story games are simple and often have a lot of redundancy.\
 **Interviewer:** Kayden Vicenti\
 **Interviewee:** Kaylin M.\
 **When:** 9/16/20\
-**Consumer Segment:** Casual gamer
+**Consumer Segment:** Casual gamer\
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
