fixed interview question showing up as statement

--- a/D1.md
+++ b/D1.md
@@ -41,7 +41,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - visual novels 
 - moral choices that affect the outcome.
 
-**Interest in space horror and some sci-fi themes.**
+**What kind of space exploration/sci-fi do you like?**
 - Specifically the movie Alien
 - Finds sci-fi to be cookie-cutter, with overdone tropes.
 - Crashland on planet cleche is over done
@@ -74,7 +74,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **What do you think when you hear “choose your own adventure”?**
 - That brings to mind Books, RPGs, DND, and “cheapo flash games.”
 
-**Interest in space horror and some sci-fi themes.**
+**What kind of space exploration/sci-fi do you like?**
 - Time Travel or something with a cool sci-fi tool like Portal
 
 **What issues do you see in story games of today?**
@@ -103,7 +103,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **What do you think when you hear “choose your own adventure”?**
 - “Choose your adventure” makes him think of lots of endings
 
-**Interest in space horror and some sci-fi themes.**
+**What kind of space exploration/sci-fi do you like?**
 - He likes kinds of space exploration/sci-fi with combat and varied weapons and ways to travel
 
 **What issues do you see in story games of today?**
@@ -129,7 +129,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Last of Us
 - Walking Dead Telltale game
 
-**Interest in space horror and some sci-fi themes.**
+**What kind of space exploration/sci-fi do you like?**
 - He likes sci-fi set on spaceships.
 - He likes serious stories that teach you something but thinks comedies should not teach you something.
 
@@ -149,7 +149,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Isaac Schwarz\
 **Interviewee:** Eli\
 **When:** 9/20/2024\
-**Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter\
+**Consumer Segments:** General Gamer/Visual novel fan/Indie game supporter
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -159,7 +159,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Blu-Ray CD games
 - black mirror
 
-**Interest in space horror and some sci-fi themes.**
+**What kind of space exploration/sci-fi do you like?**
 - He likes sci-fi where the characters are stranded in space.
 - Ship management.
 
