--- a/D1.md
+++ b/D1.md
@@ -1,8 +1,8 @@
 ﻿# Project Inception
 
-Group 01 – “[Nebulous-Enigma]”\
+_Group 01 – “[Nebulous-Enigma]”\
 Date and location: September 23, 2024\
-Group Members: Collin Boyer, Levi Ly, 
+Group Members: Collin Boyer, Levi Ly_
 
 ## 1. Introduction
 
