--- a/D1.md
+++ b/D1.md
@@ -183,7 +183,11 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Consumer Segment:** Casual gamer\
 
 **What level of video gaming knowledge would you say you have?**
-- Moderate
+- Casual Gamer
+- Beginner Gamer
+- Indie Game Supporter
+- Student Gamer
+
 
 **What do you think when you hear “choose your own adventure”?**
 - open-ended they like them a lot, lots of possibilities, ability to replay it again. Story games are very straightforward, can be played more than once, and there are great fandoms.
@@ -197,6 +201,38 @@ For entertainment, solving boredom, and allowing users to take a break from over
 
 **Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
 - Must have
+
+### Interview 9:
+
+**Summary:** Story games are simple and often have a lot of redundancy.\
+**Interviewer:** Kayden Vicenti\
+**Interviewee:** Kaylin M.\
+**When:** 9/16/20\
+**Consumer Segment:** Casual gamer\
+
+The customer segment represented:
+Casual Gamer
+Indie Game Supporter
+Student Gamer
+Gaming knowledge: Moderate, areas of the gaming industry are not as connected to, preference for cozy games. 
+
+The customer segment represented:
+- Casual Gamer
+- Beginner Gamer
+- Indie Game Supporter
+- Student Gamer
+- Gaming knowledge: 5/10, moderate.
+
+**What do you think when you hear choose your adventure?**
+- open-ended they like them a lot, lots of possibilities, ability to replay it again. Story games are very straightforward, can be played more than once, and there are great fandoms.
+
+**What is your favorite game story? (or a story)**
+- The Last of Us Game.
+
+**What makes that story so good?**
+- “Having a community discussion post, never seen that in a game before. Check-points/progress saves. Self-reflection is what the character is thinking and how they change, with negative or positive impacts on them. The ability to create characters will go well, and won't have to play as randomly created characters.”
+Assessment: Must have / Nice to have / Don’t care: Must Have
+- “There is a build-up of an understanding of the characters, there is background, and then they rip your heart out. The setting makes it scary, and it is terrifying, great writing character development, and world-building.”
 
 **Assessment:**
    - Must have - non-alarming tone
