--- a/D1.md
+++ b/D1.md
@@ -2,7 +2,7 @@
 
 _Group 01 – “[Nebulous-Enigma]”\
 Date and location: September 23, 2024\
-Group Members: Collin Boyer, Levi Ly_
+Group Members: Collin Boyer, Levi Ly_, Ciaran Wham, Kayden Vicenti, Kameron Napeir, Isaac Shwarz
 
 ## 1. Introduction
 
