--- a/D1.md
+++ b/D1.md
@@ -144,6 +144,34 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
 - Must have
 
+### interview 5
+**Interviewer:** Kameron Napier\
+**Interviewee:** Zack\
+**When:** 9/21/2024\
+**Consumer Segments:** Gamer
+
+**What do you think when you hear “choose your own adventure”?**
+- Thinks of book series from the 80s-'90s that had multiple endings
+- Games like Baldur's Gate
+
+**What kind of space exploration/sci-fi do you like?**
+- Sci-fi Horror
+- Cooperative and competitive games
+
+**What issues do you see in story games of today?**
+- Not a well balance between story and gameplay
+- Not enough variety in gameplay
+- Boring story
+- Over relience on one over the other
+
+**Are there any other suggestions you have for us?**
+- It is good to experiment
+- The characters need to be interesting
+- The characters matter a lot
+
+**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
+- Said might want
+
 
 ### Interview 6:
 
