--- a/D1.md
+++ b/D1.md
@@ -300,7 +300,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Is this a must-have, might want, or do not want?**
 - Must-have
 
-## 4. Final value proposition and consumer segments
+## 4. Final value proposition and customer segments
 
 ### Final Value Proposition:
 Experience your creative story.
