--- a/D1.md
+++ b/D1.md
@@ -33,7 +33,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Ciaran Wham\
 **Interviewee:** Student (did not get the name)\
 **When:** 9/21/2024\
-**Consumer Segments:** Gamer
+**Customer Segments:** Gamer
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -64,7 +64,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Levi Ly\
 **Interviewee:** Abby\
 **When:** 9/20/2024\
-**Consumer Segments:** Casual gamer, Visual novel fan
+**Customer Segments:** Casual gamer, Visual novel fan
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -97,7 +97,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Collin Boyer\
 **Interviewee:** Ed\
 **When:** 9/11/2024\
-**Consumer segments:** General gamer
+**Customer segments:** General gamer
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -129,7 +129,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Collin Boyer\
 **Interviewee:** Psy\
 **When:** 9/21/2024\
-**Consumer segments:** Gamer
+**Customer segments:** Gamer
 
 **What level of video gaming knowledge would you say you have?**
 - Very high
@@ -154,7 +154,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Kameron Napier\
 **Interviewee:** Zack\
 **When:** 9/21/2024\
-**Consumer Segments:** Gamer
+**Customer Segments:** Gamer
 
 **What do you think when you hear “choose your own adventure”?**
 - Book series from the '80s-'90s that had multiple endings
@@ -183,7 +183,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Isaac Schwarz\
 **Interviewee:** Ethan\
 **When:** 9/18/2024\
-**Consumer Segments:** General gamer
+**Customer Segments:** General gamer
 
 **What do you think when you hear “choose your own adventure”?**
 - Telltale games, especially The Walking Dead
@@ -211,7 +211,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Isaac Schwarz\
 **Interviewee:** Eli\
 **When:** 9/20/2024\
-**Consumer Segments:** General gamer, Visual novel fan, Indie game fan
+**Customer Segments:** General gamer, Visual novel fan, Indie game fan
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -241,7 +241,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Kayden Vicenti\
 **Interviewee:** Kaylin\
 **When:** 9/16/20\
-**Consumer Segment:** Casual gamer, Indie game fan
+**Customer Segment:** Casual gamer, Indie game fan
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
@@ -273,7 +273,7 @@ For entertainment, solving boredom, and allowing users to take a break from over
 **Interviewer:** Kayden Vicenti\
 **Interviewee:** Myleen\
 **When:** 9/16/20\
-**Consumer Segment:** Beginner gamer, Casual gamer, Indie game fan
+**Customer Segment:** Beginner gamer, Casual gamer, Indie game fan
 
 **What level of video gaming knowledge would you say you have?**
 - Moderate
