Fix formatting error

--- a/D1.md
+++ b/D1.md
@@ -168,15 +168,15 @@ For entertainment, solving boredom, and allowing users to take a break from over
 - Imbalances between story and gameplay
 - Not enough variety in gameplay
 - Boring story
-- Over relience on one over the other
+- Over reliance on one over the other
 
 **Are there any other suggestions you have for us?**
 - It is good to experiment
 - The characters need to be interesting
 - The characters matter a lot
-- 
-**Is this a must-have, might want, or do not want? (must have) (might want) (do not want)**
-- Said might want
+
+**Is this a must-have, might want, or do not want?**
+- Might want
 
 
 ### Interview 6:
